--- a/templates/variant.html
+++ b/templates/variant.html
@@ -15,6 +15,8 @@
     </thead>
     <tbody>
 
+    {{ variantSet }}
+
     {% for var in variants["variants"] %}
       <tr>
         <td>{{ var.referenceName }}</td>
