--- a/templates/Datasets.html
+++ b/templates/Datasets.html
@@ -140,8 +140,8 @@ $( "#add_dataset" ).on('submit', function( event ) {
     }
     var new_dataset = "<tr class='success'> \
                       <td><input class='manage' type='checkbox' value='{id}'> \
-                      <td><a href='/Project/{name}/'>{name}</a></td> \
-                      <td><a href='/Project/{name}/'>{id}</a></td> \
+                      <td><a href='/Datasets/{name}/'>{name}</a></td> \
+                      <td><a href='/Datasets/{name}/'>{id}</a></td> \
                       <td>{isPublic}</td> \
                     </tr>".format({name:data["name"], id:data["id"],isPublic:isPublic});
     $('#add_new').before(new_dataset);
