--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,8 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="/Project/">Project</a></li>
+            <li><a href="/Datasets/">Datasets</a></li>
+            <li><a href="/Jobs/">Jobs</a></li>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           
